# gnotus

./: .gitignore  README.md  compose.dev.yml  compose.yml
.github/workflows/: build.yml
.zed/: settings.json
backend/: .gitignore  Dockerfile  Dockerfile.dev  config-dev.yml  config.yml  entrypoint.sh  manage.sh  pyproject.toml
backend/app/: dump.py  indexing.py  main.py  manage.py  settings.py
backend/app/api/: __init__.py  auth.py  config.py  docs.py  pagination.py  sharelinks.py  sitemap.py  uploads.py  users.py
backend/app/auth/: dependencies.py  passwords.py
backend/app/models/: __init__.py  doc.py  revision.py  setting.py  sharelink.py  upload.py  user.py  utils.py
backend/app/schemas/: auth.py  config.py  doc.py  revision.py  role.py  sharelink.py  upload.py  user.py
backend/app/utils/: dump.py  indexing.py
backend/migrations/gnotus/: 10_20260114144251_add_doc_to_uploads.py  11_20260114201936_add_slug_field.py  12_20260114204817_update.py  13_20260115174114_add_home_page.py  14_20260115190325_reparent_toplevel_to_home.py  15_20260115192758_urlpath_leading_slash.py  16_20260116154103_update.py  6_20250612183301_None.py  7_20250620073222_update.py  8_20250701154654_update.py  9_20251211134605_update.py
backend/test/: conftest.py  test_auth.py  test_config.py  test_csrf.py  test_docs.py  test_dump.py  test_settings.py  test_sitemap.py  test_uploads.py  test_users.py  utils.py
frontend/: .prettierrc.json  Caddyfile  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+54 files in other folders)
